@@ -1,2 +1,5 @@
 # EqualLib library for deepComparison
+
+--add-opens java.base/java.util=ALL-UNNAMED
+
 This library implementing "areEqual" method that accepts two objects and deeply compares them. Every field is compared deeply. Library using reflection. Be careful.
